fixing the overflow 7

--- a/mobileRes.css
+++ b/mobileRes.css
@@ -382,7 +382,7 @@
     }
 
     .cards-2 {
-        height: 30%;
+        height: 25%;
         width: 80%;
     }
 
@@ -416,7 +416,7 @@
         color: rgb(78, 77, 77);
     }
     .container-4-footer{
-        height: 7%;
+        height: 9%;
         width: 100%;
         display: flex;
         align-items: flex-end;
@@ -434,9 +434,7 @@
     .footer-upper-box{
         height:20%;
         width: 90%;
-        overflow-x: hidden;
-        overflow-y: visible;
-
+        overflow: hidden !important;
     }
     .footer-upper-box > .the-half-circle{
         height: 300px;
